# payslip-tracker

./: pyproject.toml
src/: generate_gql_base.py  main.py  routes.py
src/app/account/: models.py  mutation.py  query.py  routers.py
src/app/account/schemas/: base.py  input.py  output.py  rest.py
src/app/tracker/: models.py  mutation.py  query.py  routers.py
src/app/tracker/schemas/: base.py  input.py  output.py
src/base/gql/: app.py  enums.py  register.py  schema.py  serializer.py  types.py
src/base/model/: __init__.py  base_model.py  filter.py  relation.py  search.py  serializer.py  utils.py
src/config/: db.py
src/utils/: token.py
